<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quanto eu cobro?</string>
    <string name="hint_nome_receita">Nome da Receita</string>
    <string name="hint_nome_ingrediente">Nome do Ingrediente</string>
    <string name="hint_quantidade">Quantidade</string>
    <string name="hint_preco">Preço</string>
    <string name="hint_custo_embalagens">Custo das Embalagens</string>
    <string name="hint_quantidade_unidades">Quantidade de Unidades</string>
    <string name="hint_percentual_lucro">Percentual de Lucro (%)</string>
    <string name="adicionar_ingrediente">Adicionar Ingrediente</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="resultado">Resultado</string>
</resources>
